UsLab-Eng-01/Traefik/02-kube-vip-cloud-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-vip-cloud-provider
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-vip-cloud-provider
  template:
    metadata:
      labels:
        app: kube-vip-cloud-provider
    spec:
      serviceAccountName: kube-vip-cloud-controller
      containers:
        - name: kube-vip-cloud-provider
          image: ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.12
          imagePullPolicy: IfNotPresent
          command: ["/kube-vip-cloud-provider"]
          args: ["--leader-elect-resource-name=kube-vip-cloud-controller"]
          resources:
            requests: { cpu: "50m",  memory: "64Mi" }
            limits:   { cpu: "200m", memory: "128Mi" }
